--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
 .center_div{
     width: 25%;
     height: 80vh;
-    background-color: cornsilk;
+    background-color: #fff;
     box-shadow: 5px 5px 25px -5px rgba(0, 0, 0, 0.5);
     border-radius: 15px;
     overflow: auto;
